--- a/lesson-019/database.env
+++ b/lesson-019/database.env
@@ -2,4 +2,4 @@ POSTGRES_HOST=db
 POSTGRES_PORT=5432
 POSTGRES_DB=fastapi_test
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=123
+POSTGRES_PASSWORD=Дфшт2010
